fix(tailwind/ui): fix accordion collapse animation

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -219,8 +219,8 @@
   .accordion-trigger {
     @apply flex flex-1 items-center justify-between gap-2 px-2 py-2 font-medium transition-all hover:bg-background-highlight hover:text-primary-hover focus-visible:outline-1 focus-visible:-outline-offset-1 focus-visible:outline-primary-hover md:px-4 [&[data-state=open]>svg]:-rotate-90 [&[data-state=open]]:bg-background-highlight [&[data-state=open]]:text-primary-highContrast;
   }
-  .accordion-item {
-    @apply mt-2 overflow-hidden p-2 text-sm transition-all data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down md:p-4;
+  .accordion-content {
+    @apply overflow-hidden text-sm transition-all data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down;
   }
 
   .accordion-indicator {
